# study-algorithm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
graph_maker/: CMakeLists.txt  main.cc  vector3d.h  vector_utility.h
graph_maker/include/: graph.h  node.h  value_sampler.h  vector2d.h
intersection/: CMakeLists.txt  main.cc
intersection/include/: intersections.h  line_segment_intersection_2d.h  line_triangle_intersection_2d.h  vec2.h  vector2d.h  vector3d.h
intersection/sample/line_triangle/: result_bool.txt
inverse_sampling/: CMakeLists.txt  README.md  main.cc  plot.txt
inverse_sampling/sample/: result_double.txt
montecarlo/: CMakeLists.txt  main.cc
random_walk/: CMakeLists.txt  main.cc
sort/: CMakeLists.txt  main.cc
